se anadieron 2 ss a la linea de codigo 13

--- a/Tped.html
+++ b/Tped.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <h1>📚 Catálogo Educativo Dominicano</h1>
-    <p>Explora los principales portales educativos y universidades del país</p>
+    <p>Explora los principales portales educativos y universidades del paísss</p>
   </header>
   <main id="catalogo">
     <!-- Tarjetas dinámicas -->
