--- a/Tped.html
+++ b/Tped.html
@@ -12,7 +12,7 @@
     <h1>📚 Catálogo Educativo Dominicano</h1>
     <p>Explora los principales portales educativos y universidades del paísss</p>
   </header>
-  <main id="catalogo">
+  <main id="catalogo">barra de busqueda avanzada 
     <!-- Tarjetas dinámicas -->
   </main>
   <script src="Tped.js"></script>
