--- a/Tped.html
+++ b/Tped.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Catálogo Educativo Dominicano</title>
+  <title>Catálogo De Instituciones Educativas Dominicanas </title>
   <link rel="stylesheet" href="Tped.css" />
 </head>
 <body>
